tests/datatypes/errors/type_not_a_function.js
/*
Expected Error:
TypeError
*/
let x = 42;
x();
